Fix image alignment.

--- a/article.css
+++ b/article.css
@@ -73,3 +73,7 @@ th, td {
 img {
     max-width: 100%;
 }
+
+p.center-image {
+  text-align: center;
+}
